# chitragupta

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cliff.toml  mkdocs.yml  pyproject.toml  versions.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
2.0.0/: index.html
2.0.0.rc1/api-reference/: index.html
2.0.0.rc1/architecture/: index.html
2.0.0.rc1/architecture/plugin-system/: index.html
2.0.0.rc1/changelog/: index.html
2.0.0.rc1/configuration/: index.html
2.0.0.rc1/configuration/ccloud-reference/: index.html
2.0.0.rc1/getting-started/prerequisites/: index.html
2.0.0.rc1/getting-started/quickstart/: index.html
2.0.0.rc1/operations/data-retention/: index.html
2.0.0.rc1/operations/monitoring/: index.html
2.0.0.rc1/search/: search_index.json
2.0.0/architecture/data-flow/: index.html
2.0.0/changelog/: index.html
2.0.0/configuration/guide/: index.html
2.0.0/getting-started/first-run/: index.html
2.0.0/operations/deployment/: index.html
2.0.0/search/: search_index.json
2.1.0/: 404.html
2.1.0/api-reference/: index.html
2.1.0/architecture/cost-model/: index.html
2.1.0/architecture/identity-resolution/: index.html
2.1.0/architecture/plugin-system/: index.html
2.1.0/changelog/: index.html
2.1.0/configuration/: index.html
2.1.0/configuration/advanced-scenarios/: index.html
2.1.0/configuration/ccloud-reference/: index.html
2.1.0/configuration/generic-metrics-reference/: index.html
2.1.0/configuration/self-managed-reference/: index.html
2.1.0/getting-started/configuration/: index.html
2.1.0/getting-started/first-run/: index.html
2.1.0/operations/: index.html
2.1.0/operations/monitoring/: index.html
2.1.0/operations/troubleshooting/: index.html
2.1.0/operations/upgrading/: index.html
2.1.0/search/: search_index.json
chargeback-engine/: pyproject.toml
chargeback-engine/tests/: conftest.py
configs/examples/: confluent_cloud.yaml  minimal.yaml  self_managed_kafka.yaml
deployables/: QUICKSTART.md  README.md  docker-compose.yml
deployables/config/: .env.example  config-ccloud.yaml  config-self-managed.yaml
deployables/config/examples/: ccloud-complete.env.example  ccloud-complete.yaml  ccloud-minimal.env.example  ccloud-minimal.yaml  ccloud-multi-tenant.env.example  ccloud-multi-tenant.yaml  ccloud-with-flink.env.example  ccloud-with-flink.yaml  ccloud-with-prometheus-emitter.yaml  generic-postgres.env.example  generic-postgres.yaml  generic-redis.env.example  generic-redis.yaml  self-managed-complete.env.example  self-managed-complete.yaml  self-managed-minimal.env.example  self-managed-minimal.yaml
dev/api-reference/: index.html
dev/architecture/: index.html
dev/architecture/cost-model/: index.html
dev/architecture/data-flow/: index.html
dev/architecture/plugin-system/: index.html
dev/changelog/: index.html
dev/configuration/advanced-scenarios/: index.html
dev/configuration/ccloud-reference/: index.html
dev/configuration/generic-metrics-reference/: index.html
dev/configuration/guide/: index.html
dev/getting-started/: index.html
dev/search/: search_index.json
docs/: api-reference.md  focus-mapping-preview.md  index.md
docs/architecture/: cost-model.md  data-flow.md  identity-resolution.md  index.md  plugin-system.md
docs/configuration/: advanced-scenarios.md  ccloud-reference.md  generic-metrics-reference.md  guide.md  index.md  self-managed-reference.md
docs/getting-started/: configuration.md  first-run.md  index.md  prerequisites.md  quickstart.md
docs/javascripts/: external-links.js
docs/operations/: data-retention.md  deployment.md  index.md  monitoring.md  troubleshooting.md  upgrading.md
examples/ccloud-full/: README.md  config.yaml  docker-compose.yml
examples/ccloud-grafana/: .env.example  README.md  config.yaml  docker-compose.yml
examples/dev/: Makefile  docker-compose.yml
examples/self-managed-full/: .env.example  README.md  config.yaml  docker-compose.yml
frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  config.ts  main.tsx
frontend/src/api/: focusPreview.ts  (+5 more)
src/: main.py  workflow_runner.py
src/emitters/: csv_emitter.py  prometheus_emitter.py  topic_attribution_csv_emitter.py
src/plugins/: __init__.py  storage_modules.py
tests/: conftest.py  test_changelog.py  test_config_override_examples.py
tests/fixtures/: ccloud_bursty_billing.json
tests/integration/: test_emitter_runner.py  test_graph_e2e.py  test_pipeline_integration.py  test_topic_attribution_e2e.py
tests/unit/: test_api_version.py  test_logging_coverage.py  test_main.py  test_main_revision_lifecycle.py  test_overlay_integration.py  test_plugin_settings_validation.py  test_workflow_runner.py  test_workflow_runner_overlay.py  test_workflow_runner_revisions.py
(+706 files in other folders)
