[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chargeback-engine"
version = "0.1.0"
description = "Multi-ecosystem chargeback engine"
requires-python = ">=3.14"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["TC003"]  # dataclass fields need runtime imports despite `from __future__ import annotations`

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
