[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chitragupt"
version = "0.1.0"
description = "Multi-ecosystem chargeback engine"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "respx>=0.21.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mike>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["TC003"]  # dataclass fields need runtime imports despite `from __future__ import annotations`

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# kafka-python is an optional runtime dependency with no type stubs.
# Suppress import errors rather than scattering type: ignore comments.
module = "kafka"
ignore_missing_imports = true
