[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "chitragupta"
dynamic = ["version"]
description = "Multi-ecosystem chargeback engine"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "cachetools>=5.0",
    "prometheus-client>=0.24.1",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "respx>=0.21.0",
    "types-cachetools>=5.0",
    "pre-commit>=4.0",
]
docs = [
    "mkdocs-material>=9.5",
    "mike>=2.0",
    "git-cliff>=2.0",
    # Guard: pymdown-extensions==10.21 has a regression where pymdownx.superfences
    # silently fails to parse fenced code blocks, leaving them as inline <p><code>
    # with collapsed newlines. Fixed in 10.21.2.
    "pymdown-extensions>=10.21.2",
]

[project.scripts]
chitragupta = "main:main"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/emitters", "src/plugins"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # Alembic batch mode on SQLite creates _alembic_tmp_* tables whose PK
    # temporarily disagrees with the SQLModel metadata.  Harmless and
    # unfixable without abandoning batch_alter_table.
    "ignore:Table '_alembic_tmp_:sqlalchemy.exc.SAWarning",
    # In-memory SQLite connections in tests may be GC'd before explicit
    # dispose(); harmless for :memory: databases.
    "ignore:unclosed database:ResourceWarning",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["TC003"]  # dataclass fields need runtime imports despite `from __future__ import annotations`

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# kafka-python is an optional runtime dependency with no type stubs.
# Suppress import errors rather than scattering type: ignore comments.
module = "kafka"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# python-dotenv has no type stubs.
module = "dotenv"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Alembic migrations are auto-generated; not worth strict-typing.
module = "core.storage.migrations.versions.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "prometheus_client"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "prometheus_client.core"
ignore_missing_imports = true
